--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,12 +29,12 @@ body {
 
 #circle_part {
     position: absolute;
-    top: 41px;
+    top: 40px;
 }
 
 .body_title {
     position: absolute;
-    top: 81px;
+    top: 80px;
     h1 {
         margin-bottom: 10px;
         font-size: 2em;
@@ -290,6 +290,9 @@ body {
 
 @media screen and (max-width: 550px) {
     .body_title {
+        h1 {
+            font-size: 1.5em;
+        }
         span {display: initial;}
     }
     .card_paymethod {
